[gd_scene load_steps=6 format=3 uid="uid://bd8ykf24qwfvs"]

[ext_resource type="Texture2D" uid="uid://l0n0jke88nwg" path="res://icon.svg" id="1_sufss"]
[ext_resource type="Script" uid="uid://bpt4dykk6rjjb" path="res://Cenas/control.gd" id="1_yd1o6"]
[ext_resource type="Script" uid="uid://vl4jrfnki26q" path="res://ItensLoja.gd" id="2_hr481"]
[ext_resource type="Texture2D" uid="uid://7bdpsi4wgnij" path="res://Assets/Fx/Sprites/Big-Explosion/big-explosion3.png" id="3_q2na2"]
[ext_resource type="Texture2D" uid="uid://d08yywo4nt1wf" path="res://Assets/Fx/Sprites/Explosion/explosion2.png" id="4_hkgue"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yd1o6")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Label" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "Loja"

[node name="Itens" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="Horizontal Orientation" type="VBoxContainer" parent="Control/MarginContainer/Itens"]
layout_mode = 2

[node name="Item 1" type="VBoxContainer" parent="Control/MarginContainer/Itens/Horizontal Orientation"]
layout_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
script = ExtResource("2_hr481")
description = "Neymar da Silva Santos Júnior (born 5 February 1992), also known as Neymar Júnior or simply Neymar, is a Brazilian professional footballer who plays as a left winger, attacking midfielder or forward for Campeonato Brasileiro Série A club Santos, which he captains, and the Brazil national team."
price = 3.0

[node name="Foto1" type="TextureRect" parent="Control/MarginContainer/Itens/Horizontal Orientation/Item 1"]
layout_mode = 2
texture = ExtResource("3_q2na2")

[node name="Nome1" type="Label" parent="Control/MarginContainer/Itens/Horizontal Orientation/Item 1"]
layout_mode = 2
text = "Neymar Jr."
horizontal_alignment = 1

[node name="Item 2" type="VBoxContainer" parent="Control/MarginContainer/Itens/Horizontal Orientation"]
layout_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
script = ExtResource("2_hr481")
description = "Acabou pro Beta"
price = 2.0

[node name="Foto" type="TextureRect" parent="Control/MarginContainer/Itens/Horizontal Orientation/Item 2"]
layout_mode = 2
texture = ExtResource("4_hkgue")

[node name="Nome" type="Label" parent="Control/MarginContainer/Itens/Horizontal Orientation/Item 2"]
layout_mode = 2
text = "Explosão"
horizontal_alignment = 1

[node name="Horizontal Orientation2" type="VBoxContainer" parent="Control/MarginContainer/Itens"]
layout_mode = 2

[node name="Item 1" type="VBoxContainer" parent="Control/MarginContainer/Itens/Horizontal Orientation2"]
layout_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
script = ExtResource("2_hr481")
description = "Neymar da Silva Santos Júnior (born 5 February 1992), also known as Neymar Júnior or simply Neymar, is a Brazilian professional footballer who plays as a left winger, attacking midfielder or forward for Campeonato Brasileiro Série A club Santos, which he captains, and the Brazil national team."
price = 3.0

[node name="Foto1" type="TextureRect" parent="Control/MarginContainer/Itens/Horizontal Orientation2/Item 1"]
layout_mode = 2
texture = ExtResource("3_q2na2")

[node name="Nome1" type="Label" parent="Control/MarginContainer/Itens/Horizontal Orientation2/Item 1"]
layout_mode = 2
text = "Neymar Jr."
horizontal_alignment = 1

[node name="Item 2" type="VBoxContainer" parent="Control/MarginContainer/Itens/Horizontal Orientation2"]
layout_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
script = ExtResource("2_hr481")
description = "Acabou pro Beta"
price = 2.0

[node name="Foto" type="TextureRect" parent="Control/MarginContainer/Itens/Horizontal Orientation2/Item 2"]
layout_mode = 2
texture = ExtResource("4_hkgue")

[node name="Nome" type="Label" parent="Control/MarginContainer/Itens/Horizontal Orientation2/Item 2"]
layout_mode = 2
text = "Explosão"
horizontal_alignment = 1

[node name="Horizontal Orientation3" type="VBoxContainer" parent="Control/MarginContainer/Itens"]
layout_mode = 2

[node name="Item 1" type="VBoxContainer" parent="Control/MarginContainer/Itens/Horizontal Orientation3"]
layout_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
script = ExtResource("2_hr481")
description = "Neymar da Silva Santos Júnior (born 5 February 1992), also known as Neymar Júnior or simply Neymar, is a Brazilian professional footballer who plays as a left winger, attacking midfielder or forward for Campeonato Brasileiro Série A club Santos, which he captains, and the Brazil national team."
price = 3.0

[node name="Foto1" type="TextureRect" parent="Control/MarginContainer/Itens/Horizontal Orientation3/Item 1"]
layout_mode = 2
texture = ExtResource("3_q2na2")

[node name="Nome1" type="Label" parent="Control/MarginContainer/Itens/Horizontal Orientation3/Item 1"]
layout_mode = 2
text = "Neymar Jr."
horizontal_alignment = 1

[node name="Item 2" type="VBoxContainer" parent="Control/MarginContainer/Itens/Horizontal Orientation3"]
layout_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
script = ExtResource("2_hr481")
description = "Acabou pro Beta"
price = 2.0

[node name="Foto" type="TextureRect" parent="Control/MarginContainer/Itens/Horizontal Orientation3/Item 2"]
layout_mode = 2
texture = ExtResource("4_hkgue")

[node name="Nome" type="Label" parent="Control/MarginContainer/Itens/Horizontal Orientation3/Item 2"]
layout_mode = 2
text = "Explosão"
horizontal_alignment = 1

[node name="Horizontal Orientation4" type="VBoxContainer" parent="Control/MarginContainer/Itens"]
layout_mode = 2

[node name="Item 1" type="VBoxContainer" parent="Control/MarginContainer/Itens/Horizontal Orientation4"]
layout_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
script = ExtResource("2_hr481")
description = "Neymar da Silva Santos Júnior (born 5 February 1992), also known as Neymar Júnior or simply Neymar, is a Brazilian professional footballer who plays as a left winger, attacking midfielder or forward for Campeonato Brasileiro Série A club Santos, which he captains, and the Brazil national team."
price = 3.0

[node name="Foto1" type="TextureRect" parent="Control/MarginContainer/Itens/Horizontal Orientation4/Item 1"]
layout_mode = 2
texture = ExtResource("3_q2na2")

[node name="Nome1" type="Label" parent="Control/MarginContainer/Itens/Horizontal Orientation4/Item 1"]
layout_mode = 2
text = "Neymar Jr."
horizontal_alignment = 1

[node name="Item 2" type="VBoxContainer" parent="Control/MarginContainer/Itens/Horizontal Orientation4"]
layout_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
script = ExtResource("2_hr481")
description = "Acabou pro Beta"
price = 2.0

[node name="Foto" type="TextureRect" parent="Control/MarginContainer/Itens/Horizontal Orientation4/Item 2"]
layout_mode = 2
texture = ExtResource("4_hkgue")

[node name="Nome" type="Label" parent="Control/MarginContainer/Itens/Horizontal Orientation4/Item 2"]
layout_mode = 2
text = "Explosão"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(496, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="Nome do Item" type="Label" parent="Control/MarginContainer/Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 57.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 23
text = "Item: "

[node name="Fundo" type="ColorRect" parent="Control/MarginContainer/Panel"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -212.0
offset_right = -28.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.225251, 0.250772, 0.212338, 1)

[node name="ImagemDoItem" type="TextureRect" parent="Control/MarginContainer/Panel/Fundo"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -64.0
offset_right = 178.0
offset_bottom = 64.0
grow_vertical = 2
texture = ExtResource("1_sufss")

[node name="Descricao" type="Label" parent="Control/MarginContainer/Panel/Fundo"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -219.0
offset_right = -14.0
offset_bottom = 328.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 12
text = "Lorem ipsum dolor sit amet. Vel nulla quia aut fuga rerum qui aliquid velit et exercitationem vero. Quo autem temporibus est quas omnis 33 magni rerum aut expedita laudantium. Eum dolorum quis in repellat accusamus aut excepturi internos quo doloribus mollitia. Ut iste velit et sint assumenda aut itaque ullam et cupiditate veniam ut molestiae repellat
"
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 161

[node name="Preco" type="Label" parent="Control/MarginContainer/Panel/Fundo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Preço : 0"

[node name="Compra" type="Button" parent="Control/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -215.0
offset_top = -157.0
offset_right = 215.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Comprar"

[node name="Saldo" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Saldo: 666"

[node name="Sair" type="Button" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Sair"

[connection signal="button_down" from="Control/MarginContainer/Panel/Compra" to="Control" method="_on_compra_button_down"]
[connection signal="button_down" from="Control/MarginContainer/Sair" to="Control" method="_on_sair_button_down"]
